[package]
name = "serial_mux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
clap = "4.6.0"
crc = { version = "3.4.0", optional = true }
env_logger = "0.11"
futures-lite = { version = "2.6.1", default-features = false, features = [
  "alloc",
  "std"
] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.51", features = [
  "io-util",
  "macros",
  "net",
  "rt",
] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.1.2"

[features]
crc = ["dep:crc"]
